# lazy_static_examples

./: Cargo.toml  README.md
examples/: hashmap.rs  multi-threading.rs  vector.rs
src/: main.rs
